2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/insert_data.php,
	godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php,
	include/ajax/module.php, include/constants.php, operation/tree.php,
	operation/netflow/nf_live_view.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php,
	operation/agentes/datos_agente.php: fixed the date and time format
	and set a help tip to say the Pandora's format.

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: revert completly the
	"html_print_image".

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: revert my own changes in
	"html_print_image", the code didn't run fine.
	
	* operation/tree.php: fixed the params to call the function.

2013-06-10 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/jquery.ui-timepicker-addon.js: updated the
	datepicker for to avoid some found bugs.
	
	* include/javascript/i18n: added translations for the datepicker.
	
	* godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php,
	include/ajax/module.php, include/functions_ui.php,
	operation/tree.php, operation/agentes/status_monitor.php,
	operation/agentes/datos_agente.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php, extensions/insert_data.php:
	changed the code for to use the user/system language in the
	datepicker.

2013-06-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/jquery-ui-1.10.0.custom.css
	include/styles/pandora.css
	include/ajax/events.php
	include/functions_graph.php
	include/functions_events.php
	include/functions_networkmap.php
	include/functions_netflow.php
	operation/tree.php
	operation/events/events.build_table.php
	operation/reporting/reporting_viewer.php