@@ -173,7 +173,9 @@ echo '<form method="post" action="' . $config['homeurl'] . 'index.php?sec=netf&s
 		html_print_input_text ('date', $date, false, 13, 10, true) .
 		html_print_image ("images/calendar_view_day.png", true,
 			array("alt" => "calendar")) .
+		ui_print_help_tip(__('Date format in Pandora is year/month/day'), true) .
 		html_print_input_text ('time', $time, false, 10, 5, true) .
+		ui_print_help_tip(__('Time format in Pandora is hours(24h):minutes:seconds'), true) .
 		"</td>";
 	
 	echo "<td>" . '<b>'.__('Interval').'</b>' . "</td>";
